# ESP32_faust2api

./: .gitignore  ESP32 and faust2api status.md  README.md  The file Basic ESP32 faust2api example.md
devtools/: create_help.ps1
example/: README.md  buildlog03.txt  buildlog04.txt  sdkconfig.old
example/DSP engines/: README.md
example/DSP engines/FaustSawtooth_nvoices_12/: DspFaust.cpp
example/main/: component.mk  main.cpp
example/main/FaustSawtooth_nvoices_12/: README.md
example/main/capture machine/: README.md
example/main/components/jdksmidi/: README
images/: graphics.pptx
sound_engines/IDE_esp32/: README.md
sound_engines/IDE_esp32Flash/: README.md
sound_engines/faust2api/: README.md
sound_engines/faust2api/DSPTemplate/: README.md
sound_engines/faust2api/FaustSawtooth/: faust commands.txt  faust2api script commands.txt  faust2api_help.txt  faustlog..txt
sound_engines/faust2api/capture_nvoices_12/: DspFaust.cpp
sound_engines/faust2api/elguitarmidi/esp_idf/faust_mqtt_tcp6_nb_v2 corrupt/main/components/jdksmidi/: CMakeLists.txt
sound_engines/faust2api/yourSynth/: yourSynth.dsp
sound_engines/faust2esp32/: README.md
sound_engines/faust2esp32/FaustSawtooth/: README.md  README_V0_2.md  command_line.txt  faustesp32_help.txt
sound_engines/faust2esp32_midi/: About MIDI for faust2esp32.md  README.md
sound_engines/faust2esp32_midi/FaustSawtooth/: README V0.2.md  faust commands.txt
sound_engines/faust2esp32_midi/FaustSawtooth/esp_idf/midi_app1/main/FaustDSP/: CMakeLists.txt  FaustSawtooth.cpp
(+400 files in other folders)
